t+ar:[[{{t-needed}}]] t+fa:[[{{t-needed}}]] t+pt:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <push#42995920>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -211,11 +211,14 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, a {{bor|en|frm|p
 {{trans-bottom}}
 
 {{trans-top|intransitive: tense the muscles of the abdomen}}
+* Arabic: {{t-needed|ar}}
 * Czech: {{t+|cs|tlačit}}
 * German: {{t+|de|drücken}}
 * Maori: {{t|mi|whakatoutou}} {{qualifier|referring to childbirth}}
-* Russian: {{t+|ru|ту́житься}} {{qualifier|of women during birth}}
+* Persian: {{t-needed|fa}}
 {{trans-mid}}
+* Portuguese: {{t-needed|pt}}
+* Russian: {{t+|ru|ту́житься}} {{qualifier|of women during birth}}
 * Spanish: {{t+|es|pujar}}
 * Telugu: {{t|te|హృదయాంతర్గత రాగము|sc=Telu}}
 * Venetian: {{t+|vec|pender}}, {{t+|vec|spender}}
