--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -49,9 +49,8 @@ Three other forms were found in the oracle bone script:
 # [[next]]; [[following]]
 # to [[understand]]
 #: {{zh-x|講明|to explain}}
-#* {{zh-x|如果{gwo2} 你 唔 明 就 要{jiu3} 講畀 我 聽。|If you don't '''understand''' then you have to tell me.|C}}
-# {{rfdef|zh}} <!--seems to be used an an adjective?-->
-#* {{zh-x|我 真係 唔係 好 明 點解……|I really don't get why…|C}}
+#* {{zh-x|你 唔 明 一定 要 出聲。|If you don't '''understand''' you must speak up.|C}}
+#* {{zh-x|我 真係 唔係 好 明 點解（……）|I really don't get why (…)|C}}
 # {{zh-div|朝}} {{w|Ming dynasty}}
 # {{surname|lang=zh|dot=,}} listed as #111 on the ''[[:w:Baijiaxing|Baijiaxing]]''
 
