--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -583,6 +583,10 @@ From {{etyl|en|fr}} {{m|en|bridge}}.
 {{fr-noun|m|-}}
 
 # {{lb|fr|card games}} [[#Etymology_2|bridge]]
+# {{lb|fr|dentistry|Canada}} {{l|en|bridge}}
+
+====Synonyms====
+* {{sense|dentistry}} {{l|fr|pont}} {{q|Canada}}
 
 ===Further reading===
 * {{R:TLFi}}
