--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -3,7 +3,7 @@
 [[Image:Aldabra.giant.tortoise.arp.jpg|thumb|A tortoise]]
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, from {{etyl|ML.|en}} {{m|la|tortuca}}, of uncertain origin. May be from {{etyl|LL.|en}} {{m|la|tartarūcha}}, from {{etyl|LL.|en}} {{m|la|tartarūchus}}, from {{etyl|grc|en}} {{m|grc|ταρταροῦχος||holder of Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld and they were commonly paired with such infernal beasts; or from {{etyl|la|en}} {{m|la|tortus||twisted}}.
+From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, from {{etyl|ML.|en}} {{m|la|tortuca}}, of uncertain origin. May be from {{etyl|LL.|en}} {{m|la|tartarūcha}}, from {{etyl|LL.|en}} {{m|la|tartarūchus}}, from {{etyl|grc|en}} {{m|grc|ταρταροῦχος||holder of Tartaros, Tartarus, the land of the dead in ancient stories}}, because it used to be thought that tortoises and turtles came from the underworld and they were commonly paired with such infernal beasts; or from {{etyl|la|en}} {{m|la|tortus||twisted}}. Teenage mutant ninja turtles are not tortoises.
 
 ===Pronunciation===
 * {{a|GA}} {{IPA|/ˈtɔːɹ.təs/|lang=en}}
