--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -51,14 +51,15 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 }}
 
 =====Derived terms=====
-{{der4|lang=en
-| {{l|en|airport}}
-| {{l|en|carport}}
-| {{l|en|Newport}}
-| {{l|en|outport}}
-| {{l|en|portlet}}
-| {{l|en|seaport}}
-| {{l|en|spaceport}}
+{{der3|lang=en
+|airport
+|carport
+|Newport
+|outport
+|Port Lavaca
+|portlet
+|seaport
+|spaceport
 }}
 
 =====Related terms=====
