--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -133,7 +133,7 @@ From {{inh|en|enm|vomiten}}, from {{der|en|la|vomitāre}}, present active infini
 {{trans-bottom}}
 
 ===Noun===
-{{en-noun|-}}
+{{en-noun|-|s}}
 
 # The [[regurgitate]]d former contents of a [[stomach]].
 # The act of regurgitating.
