--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -56,6 +56,7 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 |carport
 |Newport
 |outport
+|Port Gibson
 |Port Lavaca
 |portlet
 |seaport
