--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -73,6 +73,7 @@
 * Turkish: {{t+|tr|Yugoslavya}}
 * Turkmen: {{t|tk|Ýugoslawiýa}}
 * Ukrainian: {{t|uk|Югосла́вія|f}}
+* Uyghur: {{t|ug|يۇگوسلاۋىيە}}
 * Uzbek: {{t|uz|Yugoslaviya}}
 * Vietnamese: {{t+|vi|Nam Tư}} ({{t|vi|南斯|sc=Hani}})
 * Welsh: {{t+|cy|Iwgoslafia}}
