--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -66,7 +66,7 @@
 * Eastern Keres: {{t|kee|'Amelika-hui-pu-'ia}}
 * Erzya: {{t|myv|Американь Вейтьсэндявкс Штаттнэ}}
 * Esperanto: {{t+|eo|Usono}}, {{t+|eo|Unuiĝintaj Ŝtatoj de Ameriko}}
-* Estonian: {{t+|et|Ameerika Ühendriigid}}
+* Estonian: {{t+|et|Ameerika Ühendriigid}}, {{t|et|Ühendriigid|p}}
 * Faroese: {{t|fo|Sameindu Statirnir Í Amerika|n}}, {{t|fo|Sambandsríki Amerika|n}}
 * Finnish: {{t+|fi|Amerikan yhdysvallat}}, {{t+|fi|Yhdysvallat}}, {{t+|fi|USA}}
 * French: {{t+|fr|États-Unis d'Amérique|m-p}}, {{t+|fr|États-Unis|m-p}}, {{t|fr|É-U}}
