--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -294,7 +294,7 @@ From {{inh|en|enm|counten}}, a {{bor|en|xno|conter|nocap=1}}, from {{der|en|fro|
 
 ===Etymology 2===
 {{wikipedia}}
-{{bor|en|xno|conte}} and {{bor|en|fro|comte||count|notext=1}}, from {{der|en|la|comes||[[companion]]}} (more specifically derived from its accusative form {{m|la|comitem}}) in the sense of "noble fighting alongside the king".
+{{bor|en|xno|conte}} and {{bor|en|fro|comte||count|notext=1}}, from {{der|en|la|comes||[[companion]]}} (more specifically derived from its accusative form {{m|la|comitem}}) in the sense of "noble fighting alongside the king". {{doublet|comes|lang=en}} and {{m|en|comte}}.
 
 ====Noun====
 {{en-noun}}
