--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -434,7 +434,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * French: {{t-needed|fr}}
 {{trans-mid}}
 * German: {{t-needed|de}}
-* Japanese: {{t-needed|ja}}
+* Japanese: {{t|ja|罹る|tr=kakaru}}
 * Khmer: {{t-needed|km}}
 * Russian: {{t+|ru|подхва́тывать|impf|sc=Cyrl}}, {{t+|ru|подхвати́ть|pf|sc=Cyrl}}, {{t+|ru|подцепля́ть|impf|sc=Cyrl}}, {{t+|ru|подцепи́ть|pf|sc=Cyrl}}
 * Spanish: {{t+|es|coger}}, {{t+|es|agarrar}}
