--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -5,6 +5,7 @@ From {{inh|en|enm|bewteful}}, {{m|enm|beautefull||attractive to the eye, beautif
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|[ˈbjuːtɪfəɫ]|lang=en}}
+* {{a|US}} {{IPA|/ˈbjut̬ɪfəɫ/|lang=en}}
 * {{audio|en-us-beautiful.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-beautiful.ogg|Audio (UK)|lang=en}}
 * {{hyphenation|beau|ti|ful|lang=en}}
