--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -380,7 +380,7 @@ From {{etyl|fro|en}} {{m|fr|porter}}, from {{etyl|la|en}} {{m|la|portare||carry}
 Named from {{etyl|pt|en}} [[Oporto]], a city in [[Portugal]] from whence the wines were originally shipped.
 
 ====Noun====
-{{en-noun}}
+{{en-noun|~}}
 {{wikipedia|Port wine}}
 
 # A type of very sweet [[fortified wine]], mostly dark red, traditionally made in [[Portugal]].
