--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -783,6 +783,27 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 
 ----
 
+==Chinese==
+{{zh-forms}}
+
+===Etymology===
+{{bor|zh|en|play}}, possibly via {{cog|ja|プレイ|tr=purei}}.
+
+===Pronunciation===
+{{zh-pron
+|m=pl'ay
+|cat=suf
+}}
+
+===Suffix===
+{{zh-suf}}
+
+# [[play]] {{gloss|BDSM sexual roleplaying}}
+#: {{zh-x|羞恥 play|erotic humiliation}}
+#: {{zh-x|女裝 play|crossdressing}}
+
+----
+
 ==Italian==
 
 ===Etymology===
