--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -784,16 +784,12 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 ----
 
 ==Chinese==
-{{zh-forms}}
 
 ===Etymology===
 {{bor|zh|en|play}}, possibly via {{cog|ja|プレイ|tr=purei}}.
 
 ===Pronunciation===
-{{zh-pron
-|m=pl'ay
-|cat=suf
-}}
+{{rfp|zh}}
 
 ===Suffix===
 {{zh-suf}}
