--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -794,7 +794,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 ===Suffix===
 {{zh-suf}}
 
-# [[play]] {{gloss|BDSM sexual roleplaying}}
+# {{l|en|play}} {{gloss|BDSM sexual roleplaying}}
 #: {{zh-x|羞恥 play|erotic humiliation}}
 #: {{zh-x|女裝 play|crossdressing}}
 
