t+nds-de:[[stoten]] ([[WT:EDIT|Assisted]]) <push#43449666>

--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -126,6 +126,8 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, a {{bor|en|frm|p
 * Latin: {{t|la|pello}}
 {{trans-mid}}
 * Latvian: {{t|lv|grūst}}
+* Low German:
+*: German Low German: {{t|nds-de|stoten}}
 * Macedonian: {{t|mk|турка|tr=túrka|sc=Cyrl}}, {{t|mk|бутка|tr=bútka|sc=Cyrl}}
 * Malay: {{t|ms|tolak}}
 * Maori: {{t|mi|kōpana}}
