--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -16,7 +16,7 @@
 ----
 
 ==Chinese==
-{{rfc|lang=zh|Needs to be split by part of speech}}
+{{rfc|zh|Needs to be split by part of speech}}
 {{zh-forms|alt=昰}}
 
 ===Glyph origin===
