t+io:[[plear]] t+io:[[pleigar]] ([[WT:EDIT|Assisted]]) <play#43708273>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -219,6 +219,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Hindi: {{t+|hi|बजाना|tr=bajānā|sc=Deva}}
 * Hungarian: {{t+|hu|játszik}} {{qualifier|noun specifying instrument in superessive case}}
 * Icelandic: {{t|is|spila}}, {{t|is|spila á}}
+* Ido: {{t+|io|plear}}
 * Indonesian: {{t+|id|bermain}}, {{t+|id|memainkan}}, {{t+|id|membunyikan}}
 * Irish: {{t|ga|seinn}}
 * Italian: {{t+|it|suonare}}
@@ -270,6 +271,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Hebrew: {{t|he|ניגן|tr=nigén}}
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t|is|spila}}
+* Ido: {{t|io|pleigar}}
 * Indonesian: {{t+|id|bermusik}}
 * Japanese: {{t+|ja|演奏|tr=えんそうする, ensō-suru|alt=演奏する|sc=Jpan}}
 * Javanese: {{t|jv|nggitar}} {{qualifier|for guitar}}, {{t|jv|nggamel}} {{qualifier|gamelan}}, {{t+|jv|nggambang}} {{qualifier|gambang}}, {{t+|jv|nyuling}} {{qualifier|flute instruments}}, {{t|jv|nggendhang}} {{qualifier|gendhang}}, {{t|jv|ngebiola}} {{qualifier|violin}},
