t+io:[[plear]] ([[WT:EDIT|Assisted]]) <play#43722042>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -321,6 +321,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Hebrew: {{t+|he|שיחק|tr=sikhék}}
 * Hungarian: {{t+|hu|játszik}}
 * Icelandic: {{t+|is|leika}}
+* Ido: {{t+|io|plear}}
 * Italian: {{t+|it|recitare}}
 {{trans-mid}}
 * Japanese: {{t|ja|演ずる|tr=えんずる, enzuru|sc=Jpan}}
