--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -227,7 +227,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 
 ===Derived terms===
 * {{vern|bastard saffron}} ({{taxlink|Cassine peragua|species|noshow=1}})
-* {{l|en|dyer's saffron}}
+* {{vern|dyer's saffron}} (''[[Carthamus tinctorius]]'')
 * {{l|en|meadow saffron}} (''[[Colchicum autumnale]]'')
 * {{vern|saffron finch}} ({{taxlink|Sicalis flaveola|species|noshow=1}})
 * {{l|en|saffronize}}
