--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -108,6 +108,7 @@ From {{inh|en|enm|pushen}}, {{m|enm|poshen}}, {{m|enm|posson}}, a {{bor|en|frm|p
 * Friulian: {{t|fur|sburtâ}}, {{t|fur|pocâ}}, {{t|fur|stocâ}}, {{t|fur|stossâ}}, {{t|fur|parâ}}
 * Galician: {{t+|gl|empurrar}}, {{t|gl|empuxar}}
 * German: {{t+|de|drücken}}, {{t+|de|schieben}}, {{t+|de|stoßen}}
+*: Alemannic German: {{t|gsw|schiebe}}
 * Greek: {{t+|el|σπρώχνω|sc=Grek}}
 *: Ancient: {{t|grc|ὠθέω}}
 * Hindi: {{t+|hi|धकेलना|tr=dhakelnā|sc=Deva}}
