--- a/en/昇/昇.16943.wikitext
+++ b/en/昇/昇.16943.wikitext
@@ -15,29 +15,7 @@
 ----
 
 ==Chinese==
-{{zh-forms|s=升}}
-
-===Glyph origin===
-{{Han etym}}
-
-===Pronunciation===
-{{zh-pron
-|m=shēng
-|c=sing1
-|h=pfs=
-|md=
-|mn=seng
-|w=
-|mc=y
-|oc=y
-|cat=
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{rfdef|lang=zh}}
-
+{{zh-see|升|v}}
 ----
 
 ==Japanese==
