--- a/en/坵/坵.13048.wikitext
+++ b/en/坵/坵.13048.wikitext
@@ -15,12 +15,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[jau1]]|y=yau1}}
-
-# {{defn|lang=yue|sort=土05}}
+==Chinese==
+{{zh-see|丘|v}}
 
 ----
 
@@ -42,15 +38,6 @@
 {{ko-hanja|hangeul=구|rv=gu|mr=ku}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qiū]] ([[qiu1]])|wg=ch'iu<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
