--- a/en/坿/坿.13058.wikitext
+++ b/en/坿/坿.13058.wikitext
@@ -12,15 +12,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[fu6]]|y=fu6}}
-
-# {{defn|lang=yue|sort=土05}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
+==Chinese==
+{{zh-see|附|v}}
 
 ----
 
@@ -34,14 +27,6 @@
 ====Readings====
 * {{ja-readings|on=[[ふ]] (fu)|kun=[[つける]] (tsukeru), [[いかだ]] (ikada)}}
 
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[fù]] ([[fu4]])|wg=fu<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
