--- a/en/坝/坝.13024.wikitext
+++ b/en/坝/坝.13024.wikitext
@@ -5,17 +5,15 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=GBO|ids=⿰土贝}}
 
-# [[embankment]]
-# [[dam]]
-
 ====References====
-* {{Han ref|kx=0226.101|hdz=10422.170|uh=575D|ud=22365}}
+{{Han ref|kx=0226.101|hdz=10422.170|uh=575D|ud=22365}}
 
 ----
 
 ==Chinese==
+
 ===Etymology 1===
 {{zh-see|壩}}
-===Etymology 2===
 
+===Etymology 2===
 {{zh-see|垻}}
