--- a/en/旾/旾.16934.wikitext
+++ b/en/旾/旾.16934.wikitext
@@ -11,16 +11,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[ceon1]]|y=cheun1}}
-
-# {{defn|lang=yue|sort=日04}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
-
+==Chinese==
+{{zh-see|春|v}}
 ----
 
 ==Japanese==
@@ -32,12 +24,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[しゅん]] (shun)|kun=[[はる]] (haru)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[chūn]] ([[chun1]])|wg=ch'un<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=日04}}
