--- a/en/愽/愽.15696.wikitext
+++ b/en/愽/愽.15696.wikitext
@@ -19,21 +19,7 @@
 ===Glyph origin===
 {{Han etym}}
 {{Han compound|心|尃|c1=s|c2=p|t1=heart|ls=psc}}.
-
-===Pronunciation===
-{{zh-pron
-|m=bó
-|c=bok3
-|mc=
-|oc=
-|ma=
-|cat=v,a
-}}
-
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 109]
-
-----
+{{zh-see|博|v}}
 
 ==Japanese==
 
