--- a/en/偪/偪.11130.wikitext
+++ b/en/偪/偪.11130.wikitext
@@ -20,22 +20,33 @@
 
 ===Glyph origin===
 {{Han etym}}
-
+===Etymology 1===
+{{zh-see|逼|v}}
+===Etymology 2===
 ===Pronunciation===
 {{zh-pron
 |m=bī
 |c=bik1
 |mc=y
 |oc=y
-|cat=
+|cat=n
 }}
-{{zh-attn-split}}<!--seems to have more meanings than just being a variant of 逼-->
 
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|zh}}
+# [[leg wrappings]]
 
+===Pronunciation===
+{{zh-pron
+|m=fú=
+|cat=v
+}}
+
+===Definitions===
+{{zh-hanzi}}
+#see [[偪陽]]
+# {{zh-altform|伏}}
 ====Compounds====
 {{zh-der|偪臣|僭上偪下|偪陽|偪仄|偪仂|偪側}}
 
