t+ar:[[إيقونة]] t+uz:[[ikona]] t+os:[[иконӕ]] t-balance ([[WT:EDIT|Assisted]]) <icon#45920510>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -73,7 +73,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 
 {{trans-top|religious painting}}
 * Albanian: {{t|sq|ikona|f}}
-* Arabic: {{t|ar|أَيْقونة|f|tr='ayqūna}}
+* Arabic: {{t|ar|أَيْقونة|f|tr='ayqūna}}, {{t|ar|إِيقُونَة|f}}
 * Armenian: {{t+|hy|սրբապատկեր}}, {{t+|hy|պատկեր}}
 * Asturian: {{t|ast|iconu|m}}
 * Azeri: {{t|az|ikona}}
@@ -99,8 +99,8 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * Hebrew: {{t+|he|איקונין|m|tr=ikonín}}
 * Hungarian: {{t+|hu|ikon}}
 * Indonesian: {{t+|id|arca}}
-{{trans-mid}}
 * Irish: {{t|ga|íocón|m}}
+{{trans-mid}}
 * Italian: {{t+|it|icona|f}}
 * Japanese: {{t|ja|聖像|tr=せいぞう, seizō}}
 * Korean: {{t|ko|이콘|sc=Kore}}, {{t|ko|성상|sc=Kore}}, {{t|ko|성화|sc=Kore}}
@@ -111,6 +111,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * Norwegian:
 *: Bokmål: {{t+|nb|ikon|m|n}}
 *: Nynorsk: {{t|nn|ikon|m|n}}
+* Ossetian: {{t|os|иконӕ}}
 * Polish: {{t+|pl|ikona|f}}
 * Portuguese: {{t+|pt|ícone|m}}, {{t+|pt|ídolo|m}}
 * Romanian: {{t+|ro|icoană|f}}
@@ -125,6 +126,7 @@ From {{etyl|la|en}} {{m|la|icon}}, from {{etyl|grc|en}} {{m|grc|εἰκών||lik
 * Thai: {{t|th|รูปเคารพ|sc=Thai}}
 * Turkish: {{t+|tr|ikon}}
 * Ukrainian: {{t+|uk|іко́на|f|sc=Cyrl}}
+* Uzbek: {{t+|uz|ikona}}
 * Yup'ik: {{t|esu|ikuunaq}}
 {{trans-bottom}}
 
