--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -81,7 +81,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 *: Min Dong: {{t|cdo|相伐|tr=soung pa|sc=Hani}}
 * Czech: {{t+|cs|bojovat}}, {{t|cs|zápasit}}, {{t+|cs|bít|alt=bít se}}
 * Danish: {{t|da|slås}}, {{t|da|kæmpe}}
-* Dutch: {{t+|nl|strijden}}, {{t+|nl|vechten}}
+* Dutch: {{t+|nl|strijden}}, {{t+|nl|vechten}}, {{t+|nl|kampen}}
 * Esperanto: {{t|eo|batali}}
 * Estonian: (''without weapons'') {{t|et|kaklema}}, (''with weapons'') {{t|et|võitlema}}
 * Finnish: (''without weapons'') {{t+|fi|tapella}}, (''with weapons'') {{t+|fi|taistella}}
