--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -111,7 +111,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 * Latvian: {{t|lv|cīnīties}}, {{t|lv|kauties}}
 * Lithuanian: {{t|lt|kautis}}, {{t+|lt|muštis}}, {{t|lt|peštis}}, {{t|lt|grumtis}}
 * Low German:
-*: German Low German: {{t|nds-de|strieden}}
+*: German Low German: {{t|nds-de|strieden}}, {{t|nds-de|fechten}}
 * Macedonian: {{t|mk|бори|impf|alt=се бори|sc=Cyrl}}
 * Maltese: {{t|mt|ġlieda}}
 * Mongolian: {{t+|mn|тэмцэх|sc=Cyrl}}
