--- a/en/偘/偘.11112.wikitext
+++ b/en/偘/偘.11112.wikitext
@@ -10,6 +10,8 @@
 * {{Han ref|kx=0110.260|dkj=00858|dj=0236.100|hdz=10191.080|uh=5058|ud=20568}}
 
 ----
+==Chinese==
+{{zh-see|侃|v}}
 
 ==Japanese==
 
@@ -29,12 +31,3 @@
 {{ko-hanja|hangeul=간|rv=gan|mr=kan}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[kǎn]] ([[kan3]])|wg=k'an<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
