--- a/en/惥/惥.15610.wikitext
+++ b/en/惥/惥.15610.wikitext
@@ -12,21 +12,8 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
 
-===Pronunciation===
-{{zh-pron
-|m=yǒng
-|c=jung2
-|mc=
-|oc=
-|cat=
-}}
-
-====References====
-* (''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 108]
-
-----
+{{zh-see|恿|v}}
 
 ==Japanese==
 
