--- a/en/愿/愿.15698.wikitext
+++ b/en/愿/愿.15698.wikitext
@@ -2,31 +2,43 @@
 {{also|願}}
 ==Translingual==
 
-===Etymology===
-{{Han etyl}}
-While {{Han simp|願|f=頁|t=心|nocap=y}}, it is already a character. {{Han compound|ls=psc|原|心|c1=p|c2=s|t2=heart}}.
-
 ===Han character===
 {{Han char|rn=61|rad=心|as=10|sn=14|four=71339|canj=MFP|ids=⿸原心 (G), ⿱原心 (K)}}
 
-# [[sincere]], [[honest]], [[virtuous]]
-
 ====References====
-* {{Han ref|kx=0397.060|dkj=11030|dj=0736.020|hdz=42333.100|uh=613F|ud=24895|bh=BA40|bd=47680}}
+{{Han ref|kx=0397.060|dkj=11030|dj=0736.020|hdz=42333.100|uh=613F}}
 
 ----
 
 ==Chinese==
+
+===Glyph origin===
+{{Han etyl}}
+{{Han compound|ls=psc|原|心|c1=p|c2=s|t2=heart}}.
+
 ===Etymology 1===
 {{zh-see|願}}
-===Etymology 2===
-===Pronunciation===
-{{zh-pron}}
 
-===Definitions===
+===Etymology 2===
+{{zh-forms}}
+
+====Pronunciation====
+{{zh-pron
+|m=yuàn
+|c=jyun6
+|mc=y
+|oc=y
+|cat=a
+}}
+
+====Definitions====
 {{zh-hanzi}}
 
-# honest and tolerant
+# [[honest]] and [[prudent]]
+
+====Compounds====
+{{zh-der|鄉愿}}
+
 ----
 
 ==Japanese==
