--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -256,6 +256,7 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * Bulgarian: {{t+|bg|о́бласт|f}}
 * Dutch: {{t+|nl|branch}} (of business), {{t+|nl|bedrijfstak}} (of business), {{t+|nl|vakgebied}} (of knowledge)
 * Finnish: {{t+|fi|ala}}
+* Georgian: {{t|ka|დარგი}}
 * German: {{t+|de|Branche|f}} (of business)
 * Greek: {{t+|el|κλάδος|m|sc=Grek}}
 * Hungarian: {{t+|hu|üzletág}}, {{t+|hu|szak}}, {{t+|hu|csoport}}
