--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -1,7 +1,7 @@
 ==English==
 [[File:Coat of arms of New Zealand.svg|160px|thumb|Coat of arms of New Zealand]]
 
-===Etymol4ogy===
+===Etymology===
 From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlement in [[Batavia]], which in turn had been named after the Dutch province of [[Zeeland]].
 
 ===Pronunciation===
@@ -237,7 +237,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 # {{l|en|New Zealand}}
 
 ====Synonyms====
-* {{l|nn|Ny-Zealand|||id=|pos=|tr=|g=}}
+* {{l|nn|Ny-Zealand}}
 
 ====Related terms====
 {{top2}}
@@ -249,4 +249,5 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * {{l|nn|nyzealendar}}
 * {{l|nn|nyzealending}}
 {{bottom}}
+
 [[Category:nn:Countries]]
