--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -302,7 +302,7 @@ From {{etyl|enm|en}} {{m|enm|pullen}}, from {{etyl|ang|en}} {{m|ang|pullian||to 
 * Telugu: {{t+|te|లాగు}}
 * Thai: {{t+|th|ดึง|tr=deung|sc=Thai}}
 * Turkish: {{t+|tr|çekmek}}
-* Ukrainian: {{qualifier|abstract}} {{t|uk|тяга́ти|impf}}, {{t|uk|потяга́ти|pf}}, {{qualifier|concrete}} {{t|uk|тягти́|impf}}, {{t|uk|потягти́|pf}}, {{t|uk|тягну́ти|impf}}, {{t|uk|потягну́ти|pf}}
+* Ukrainian: {{qualifier|abstract}} {{t|uk|тяга́ти|impf}}, {{t|uk|потяга́ти|pf}}, {{qualifier|concrete}} {{t|uk|тягти́|impf}}, {{t|uk|потягти́|pf}}, {{t|uk|тягну́ти|impf}}, {{t|uk|потягну́ти|pf}}, {{t|uk|витя́гувати}}, {{t|uk|витяга́ти}}
 * Urdu: {{t|ur|کهينچنا|tr=khī̃cnā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|kéo}}, {{t+|vi|giật}}
 * Walloon: {{t+|wa|saetchî}}, {{t+|wa|haetchî}}
