t+pt:[[loiro]] t+pt:[[loira]] t+fr:[[blonde]] ([[WT:EDIT|Assisted]]) <blond#46046373>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -36,7 +36,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 * Dutch: {{t+|nl|blond}}, {{t+|nl|blondine}}
 * Esperanto: {{qualifier|♂♀}} {{t|eo|blondulo}}, {{qualifier|♂}} {{t|eo|virblondulo}}, {{qualifier|♀}} {{t|eo|blondulino}}
 * Finnish: {{t+|fi|vaaleaverikkö}}
-* French: {{t+|fr|blond|m}}
+* French: {{t+|fr|blond|m}}, {{t+|fr|blonde|f}}
 * Georgian: {{t|ka|ქერა|sc=Geor}}
 * German: {{t|de|Blonder|m}}, {{t|de|Blondin|m}} {{qualifier|obsolete}}, {{t|de|Blonde|f}}, {{t+|de|Blondine|f}}, {{t|de|Blondhaariger|m}}, {{t|de|Blondhaarige|f}}, {{t|de|Flachshaariger|m}}, {{t|de|Flachshaarige|f}}, {{qualifier|♂♀}} {{t|de|Blondkopf|m}}, {{qualifier|♂♀}} {{t|de|Blondschopf|m}}
 * Greek: [[ξανθός]] ''m'', [[ξανθή]] ''f''
@@ -56,7 +56,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 * Norwegian: {{t|no|lys(håret)}}, blond, {{t+|no|blondine}}
 * Persian: {{t+|fa|بلوند|tr=blond|sc=fa-Arab}}
 * Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
-* Portuguese: {{t+|pt|loiro|m}}, {{t+|pt|louro|m}}
+* Portuguese: {{t+|pt|loiro|m}}, {{t+|pt|louro|m}}, {{t+|pt|loiro|m}}, {{t+|pt|loira|f}}
 * Punjabi: {{t|pa|ਕੱਕਾ|m|tr=kakkā|sc=Guru}}
 * Romanian: {{t+|ro|blondă}}
 * Russian: {{t+|ru|блонди́н|m}}, {{t+|ru|блонди́нка|f}}
