t+he:[[ברידג׳]] t+ar:[[بريدج]] t-balance ([[WT:EDIT|Assisted]]) <bridge#46046640>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -485,6 +485,7 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 
 =====Translations=====
 {{trans-top|card game}}
+* Arabic: {{t|ar|بْرِيدْج|m|tr=bridj}}
 * Belarusian: {{t|be|брыдж|m}}
 * Bulgarian: {{t|bg|бридж|m}}
 * Catalan: {{t+|ca|bridge|m}}
@@ -500,13 +501,14 @@ From the earlier form (name of an older card game) ''biritch'', probably from {{
 * Georgian: {{t|ka|ბრიჯი}}
 * German: {{t+|de|Bridge|n}}
 * Greek: {{t+|el|μπριτζ|n}}
+* Hebrew: {{t|he|ברידג׳|m|tr=bridj}}
 * Hungarian: {{t+|hu|bridzs}}
 * Icelandic: {{t|is|bridds|n}}
 * Italian: {{t+|it|bridge|m}}
 * Japanese: {{t|ja|ブリッジ|tr=burijji}}
 * Korean: {{t|ko|브리지}}
-* Latvian: {{t|lv|bridžs|m}}
 {{trans-mid}}
+* Latvian: {{t|lv|bridžs|m}}
 * Macedonian: {{t|mk|бриџ|m|sc=Cyrl}}
 * Malay: {{t|ms|brij}}
 * Maori: {{t|mi|piriti}}
