--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -4,7 +4,7 @@
 
 ===Etymology===
 {{PIE root|en|(s)ker}}
-{{bor|en|non|skyrta}}, from {{der|en|gem-pro|*skurtijǭ}}. Compare {{m|en|shirt}}.
+{{bor|en|non|skyrta}}, from {{der|en|gem-pro|*skurtijǭ}}. {{doublet|en|shirt}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/skɜːt/|lang=en}}
