--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -50,7 +50,10 @@ Strong conjugation of {{m|en|heat}}
 <!-- 1 syllable words !-->
 
 ===Anagrams===
-* {{anagrams|en|the}}
+* {{l|en|ETH}}, {{l|en|Eth}}, {{l|en|eth}}, {{l|en|TEH}}, {{l|en|teh}}, {{l|en|the}}
+
+[[Category:English 1-syllable words]]
+[[Category:en:Fan fiction]]
 
 ----
 
