--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -63,6 +63,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 * Faroese: {{t+|fo|kjøt|n}}
 * Finnish: {{t+|fi|liha}}
 * French: {{t+|fr|chair}}
+* Galician: {{t+|gl|carne|f}}
 * German: {{t+|de|Fleisch|n}}
 * Greek: {{t+|el|σάρκα|f}}
 * Hungarian: {{t+|hu|hús}}
