--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -58,9 +58,9 @@ Modern form is a compound of {{zh-l|*音}} and {{zh-l|*心|heart}}. However, the
 
 ====Readings====
 {{ja-readings
-|goon=[[い]] (i)
-|kanon=[[い]] (i)
-|kun={{qualifier|rare}} [[こころ]] (kokoro) {{non-joyo-reading}}
+|kanon=い
+|goon=い
+|kun=こころ, おも-う, おも-い
 }}
 
 ====Compounds====
