--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -60,7 +60,7 @@ Modern form is a compound of {{zh-l|*音}} and {{zh-l|*心|heart}}. However, the
 {{ja-readings
 |kanon=い
 |goon=い
-|kun=こころ, おも-う, おも-い
+|kun=こころ-, おも-う, おも-い
 }}
 
 ====Compounds====
