--- a/en/既/既.16907.wikitext
+++ b/en/既/既.16907.wikitext
@@ -54,7 +54,11 @@ Note the stroke order in the right component 旡, which may not be clear in the 
 # {{defn|lang=ja|sort=无05}}
 
 ====Readings====
-* {{ja-readings|goon=[[け]] (ke)|kanon=[[き]] (ki)|kun=[[つきる]] (tsukiru), [[すでに]] (sudeni)}}
+{{ja-readings
+|goon=け
+|kanon=き
+|kun=つきる, すで-に
+}}
 
 ----
 
