/* Readings */ {{ja-readings}} update; did not touch kun:hiideru <偉#46176536>

--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -59,7 +59,10 @@ Note that in Japanese [[shinjitai]], the bottom component of [[韋]] is written 
 # admirable
 
 ====Readings====
-* {{ja-readings|on=[[い]] (i), {{qualifier|historical}} [[ゐ]] (wi)|kun=[[えらい]] (erai), [[ひいでる]] (hiideru), [[すぐれる]] (sugureru)}}
+{{ja-readings
+|on=い<ゐ
+|kun=えら-い, ひいでる, すぐ-れる
+}}
 
 ====Compounds====
 * {{m|ja|偉業|tr=igyō}}
