t+ug:[[يوپكا]] t+kk:[[юбка]] t+ky:[[юбка]] t-balance t+uz:[[yubka]] t+az:[[yubka]] t+az:[[ətək]] t+tg:[[доман]] t+bn:[[স্কার্ট]] t+sq:[[rrethinë]] t+mn:[[банзал]] t+mn:[[юбка]] t+tk:[[ýubka]] ([[WT:EDIT|Ass... <skirt#46179688>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -61,13 +61,16 @@
 
 ====Translations====
 {{trans-top|clothing}}
+* Albanian: {{t+|sq|rrethinë|f}}
 * Arabic: {{t|ar|تَنُّورَة|f}}, {{t|ar|جُوب|m}}, {{t|ar|خَرَّاطَة|f}}, {{t|ar|وَزَرَة|f}}, {{t|ar|جُونِلَّة|f|tr=junilla}}
 *: Egyptian Arabic: {{t|arz|جيبة|f|tr=žība|sc=Arab}}
 * Armenian: {{t+|hy|փեշ}}
 * Asturian: {{t|ast|falda|f}}, {{t|ast|saya|f}}
+* Azeri: {{t+|az|yubka}}, {{t+|az|ətək}}
 * Baluchi: {{t|bal|دامن|tr=dáman}}
 * Basque: {{t+|eu|gona}}
 * Belarusian: {{t|be|спадні́ца|f|sc=Cyrl}}
+* Bengali: {{t|bn|স্কার্ট}}
 * Bulgarian: {{t+|bg|пола́|f|sc=Cyrl}}
 * Burmese: {{t|my|စကတ်}}, {{t+|my|ထဘီ}}
 * Catalan: {{t+|ca|faldilla|f}}
@@ -94,7 +97,9 @@
 * Irish: {{t|ga|sciorta|m}}
 * Italian: {{t+|it|gonna|f}}
 * Japanese: {{t+|ja|スカート|tr=sukāto|sc=Jpan}}
+* Kazakh: {{t+|kk|юбка}}
 * Korean: {{t+|ko|치마|sc=Kore}}, {{t+|ko|스커트|sc=Kore}}
+* Kyrgyz: {{t+|ky|юбка}}
 * Latgalian: {{t|ltg|snuotine}}
 * Latvian: {{t|lv|svārki|m-p}}
 {{trans-mid}}
@@ -102,6 +107,7 @@
 * Macedonian: {{t|mk|здолниште|n}}, {{t|mk|здолница|f}}, {{t|mk|сукња|f}} {{qualifier|colloquial}}
 * Maltese: {{t|mt|dublett|m}}
 * Maori: {{t|mi|paki}}
+* Mongolian: {{t+|mn|банзал}}, {{t|mn|юбка}}
 * Navajo: {{t|nv|tłʼaakał}}
 * Neapolitan: {{t|nap|vunnella|f}}
 * Norman: {{t|nrf|cotelle|f}}, {{t|nrf|cotillon|m}}
@@ -122,12 +128,16 @@
 * Spanish: {{t+|es|falda|f}}, {{t+|es|enaguas|f-p}} {{qualifier|Costa Rica|Nicaragua}}, {{t+|es|pollera|f}} {{qualifier|Argentina|Chile|Paraguay|Uruguay}}, {{t|es|saya|f}} {{qualifier|Cuba}}
 * Swahili: {{t|sw|skati}}
 * Swedish: {{t+|sv|kjol|c}}
+* Tajik: {{t|tg|доман}}
 * Taos: {{t|twf|yúwolaną}}
 * Telugu: {{t+|te|పరికిణి}}
 * Thai: {{t+|th|กระโปรง|sc=Thai}}
 * Turkish: {{t+|tr|etek}}
+* Turkmen: {{t|tk|ýubka}}
 * Ukrainian: {{t+|uk|спідни́ця|f|sc=Cyrl}}
 * Urdu: {{t|ur|سکرٹ|f|tr=skarṭ|sc=ur-Arab}}
+* Uyghur: {{t|ug|يوپكا}}
+* Uzbek: {{t+|uz|yubka}}
 * Vietnamese: {{t+|vi|váy}}
 * Volapük: {{t+|vo|juüp}}
 * Welsh: {{t|cy|sgert|f}}
