--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -66,7 +66,7 @@
 *: Egyptian Arabic: {{t|arz|جيبة|f|tr=žība|sc=Arab}}
 * Armenian: {{t+|hy|փեշ}}
 * Asturian: {{t|ast|falda|f}}, {{t|ast|saya|f}}
-* Azeri: {{t+|az|yubka}}, {{t+|az|ətək}}
+* Azeri: {{t+|az|ətək}}, {{t+|az|yubka}}
 * Baluchi: {{t|bal|دامن|tr=dáman}}
 * Basque: {{t+|eu|gona}}
 * Belarusian: {{t|be|спадні́ца|f|sc=Cyrl}}
