--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -113,7 +113,7 @@
 * Norman: {{t|nrf|cotelle|f}}, {{t|nrf|cotillon|m}}
 * Norwegian: {{t+|no|skjørt|n}}
 * Old English: {{t|ang|scyrte|f}}
-* Persian: {{t+|fa|دامن|tr=dâman|sc=fa-Arab}}, {{t|fa|دامن دوخت|sc=fa-Arab}}
+* Persian: {{t+|fa|دامن|tr=dâman|sc=fa-Arab}}
 * Polish: {{t+|pl|spódnica|f}}
 * Portuguese: {{t+|pt|saia|f}}
 * Romani: {{t|rom|rotya|f}}
