--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -64,6 +64,7 @@
 * Albanian: {{t+|sq|rrethinë|f}}
 * Arabic: {{t|ar|تَنُّورَة|f}}, {{t|ar|جُوب|m}}, {{t|ar|خَرَّاطَة|f}}, {{t|ar|وَزَرَة|f}}, {{t|ar|جُونِلَّة|f|tr=junilla}}
 *: Egyptian Arabic: {{t|arz|جيبة|f|tr=žība|sc=Arab}}
+* Armenian: {{t+|hy|շրջազգեստ}}
 * Asturian: {{t|ast|falda|f}}, {{t|ast|saya|f}}
 * Azeri: {{t+|az|ətək}}, {{t+|az|yubka}}
 * Baluchi: {{t|bal|دامن|tr=dáman}}
