--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -68,6 +68,7 @@
 * Asturian: {{t|ast|falda|f}}, {{t|ast|saya|f}}
 * Azeri: {{t+|az|ətək}}, {{t+|az|yubka}}
 * Baluchi: {{t|bal|دامن|tr=dáman}}
+* Bashkir: {{t|ba|итәк}}
 * Basque: {{t+|eu|gona}}
 * Belarusian: {{t|be|спадні́ца|f|sc=Cyrl}}
 * Bengali: {{t|bn|স্কার্ট}}
@@ -133,10 +134,11 @@
 * Swedish: {{t+|sv|kjol|c}}
 * Tajik: {{t|tg|доман}}
 * Taos: {{t|twf|yúwolaną}}
+* Tatar: {{t+|tt|итәк}}
 * Telugu: {{t+|te|పరికిణి}}
 * Thai: {{t+|th|กระโปรง|sc=Thai}}
 * Turkish: {{t+|tr|etek}}
-* Turkmen: {{t|tk|ýubka}}
+* Turkmen: {{t|tk|ýubka}}, {{t|tk|etek}}
 * Ukrainian: {{t+|uk|спідни́ця|f|sc=Cyrl}}
 * Urdu: {{t|ur|سکرٹ|f|tr=skarṭ|sc=ur-Arab}}
 * Uyghur: {{t|ug|يوپكا}}
