--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -104,9 +104,10 @@
 * Korean: {{t+|ko|치마|sc=Kore}}, {{t+|ko|스커트|sc=Kore}}
 * Kyrgyz: {{t+|ky|юбка}}
 * Lao: {{t|lo|ສິ້ນ}}, {{t+|lo|ກະໂປງ}}
-{{trans-mid}}
 * Latgalian: {{t|ltg|snuotine}}
+{{trans-mid}}
 * Latvian: {{t|lv|svārki|m-p}}
+* Lithuanian: {{t|lt|sijonas|m}}
 * Luxembourgish: {{t|lb|Jupe|f}}
 * Macedonian: {{t|mk|здолниште|n}}, {{t|mk|здолница|f}}, {{t|mk|сукња|f}} {{qualifier|colloquial}}
 * Maltese: {{t|mt|dublett|m}}
