--- a/en/傜/傜.11183.wikitext
+++ b/en/傜/傜.11183.wikitext
@@ -44,6 +44,6 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[tà]] ([[ta4]]), [[yáo]] ([[yao2]])|wg=t'a<sup>4</sup>, yao<sup>2</sup>}}
+{{cmn-hanzi|pin=[[yáo]] ([[yao2]])|wg=yao<sup>2</sup>}}
 
 # {{defn|lang=cmn|sort=人10}}
