--- a/en/傜/傜.11183.wikitext
+++ b/en/傜/傜.11183.wikitext
@@ -11,12 +11,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[jiu4]]|y=yiu4}}
+===Pronunciation===
+{{zh-pron
+|m=yáo
+|c=jiu4
+|mc=y
+|oc=y
+|ma=
+|cat=pn
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -38,12 +49,3 @@
 {{ko-hanja|hangeul=요|rv=yo|mr=yo}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[yáo]] ([[yao2]])|wg=yao<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
