added "Vietnamese" section with /vi-readings/ and /defn|lang=vi|sort=人10/ templates; added "References" section and nomfoundation.org wikilink <傜#46185085>

--- a/en/傜/傜.11183.wikitext
+++ b/en/傜/傜.11183.wikitext
@@ -49,3 +49,15 @@
 {{ko-hanja|hangeul=요|rv=yo|mr=yo}}
 
 # {{defn|lang=ko|sort=人10}}
+
+----
+
+==Vietnamese==
+
+===Han character===
+{{vi-readings|rs=人10| hanviet = diêu}}
+
+# {{defn|lang=vi|sort=人10}}
+
+====References====
+*[http://nomfoundation.org/common/nom_details.php?codepoint=509c Nom Foundation]
