--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -9,7 +9,7 @@
 ===Proper noun===
 {{en-proper noun|head=the [[Czech]] [[republic|Republic]]}}
 
-# A [[country]] in [[Central Europe]].
+# {{senseid|en|Q213}}A [[country]] in [[Central Europe]].
 
 ====Synonyms====
 * {{l|en|Czechia}}
@@ -19,7 +19,7 @@
 * {{l|en|CZE}}
 
 ====Translations====
-{{trans-top|country in Central Europe}}
+{{trans-top|id=Q213|country in Central Europe}}
 * Abkhaz: {{t|ab|Чехиа|sc=Cyrl}}
 * Afrikaans: {{t|af|Tsjeggiese Republiek}}, {{t|af|Tsjeggië}}
 * Albanian: {{t|sq|Çeke|f}}
@@ -146,6 +146,5 @@
 * {{l|en|Appendix:Place names in the Czech Republic}}
 * {{l|en|Appendix:Countries of the world}}
 
-[[Category:en:Countries]]
 [[Category:en:Countries of Europe]]
 [[Category:en:Czech Republic]]
