--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -20,7 +20,7 @@
 ===Proper noun===
 {{en-proper noun|Frances}}
 
-# A [[country]] in Western Europe which borders [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]], is a member state of the [[European Union]]{{,}} and has a population of 62 million inhabitants. Official name: [[French Republic]] ([[République française]]).
+# {{senseid|en|Q142}}A [[country]] in Western Europe which borders [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Official name: [[French Republic]].
 #* '''1998''', Shanny Peer, ''France on Display: Peasants, Provincials, and Folklore'' (ISBN 0791437108), page 2:
 #*: Although scholars have offered different chronologies and causalities for the move toward modernity, most have resolved the paradox of the two '''Frances''' by placing them in sequence: "diverse '''France''' gave way over time as modern centralized '''France''' gathered force."
 #* {{quote-journal
@@ -38,7 +38,7 @@
 {{rel3|Franco-|francophobe|Francophone|Frankland|French|Frenchman|New France|Tour de France|lang=fr}}
 
 ====Translations====
-{{trans-top|country}}
+{{trans-top|id=Q142|country}}
 * Acehnese: {{t|ace|Peurancih}}
 * Afrikaans: {{t+|af|Frankryk}}
 * Albanian: {{t+|sq|Franca|f}}, {{t|sq|Galia|f}}
