--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -13,7 +13,7 @@ From {{etyl|enm|en}} {{m|enm|Germanie}}, from {{etyl|ang|en}} {{m|ang|Germania}}
 ===Proper noun===
 {{en-proper noun|~|Germanies|Germanys}}
 
-# {{lb|en|geography}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]], with its [[capital]] in [[Berlin]].
+# {{senseid|en|Q183}}{{lb|en|geography}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]], with its [[capital]] in [[Berlin]].
 #* '''2014 September 25''', Michael Heise, "[http://online.wsj.com/articles/the-myth-of-the-stupid-german-investor-1411668084 The Myth of the Stupid German Investor]" in the ''Wall Street Journal'':
 #*: Germans save a lot, produce plenty and spend little. The result is a massive external surplus. Last year, '''Germany'''’s current account surplus stood at almost [[€]]200 billion ([[USD|$]]260 billion), the world's largest.
 #* '''2014 July 14''', Sam Bordenjuly, "[http://www.nytimes.com/2014/07/14/sports/worldcup/world-cup-2014-germany-defeats-argentina-in-final.html Germans End Long Wait: 24 Years and a Bit Extra]" in ''The New York Times'':
@@ -103,7 +103,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 {{rel-bottom}}
 
 ====Translations====
-{{trans-top|country in Central Europe}}
+{{trans-top|id=Q183|country in Central Europe}}
 * Abenaki: {{t|abe|Alemônki}}
 * Abkhaz: {{t|ab|Алмантәыла|sc=Cyrl}}
 * Acehnese: {{t|ace|Jeureuman}}
