--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -12,7 +12,7 @@
 ===Proper noun===
 {{en-proper noun|head=[[united|United]] [[kingdom|Kingdom]]}}
 
-# A [[kingdom]] and [[sovereign]] [[state]] in [[Western Europe]] comprising the four countries of [[England]], [[Scotland]] and [[Wales]] in the island of [[Great Britain]], and [[Northern Ireland]] in the island of [[Ireland]]. Since 1922. Capital: [[London]].
+# {{senseid|en|Q145}}A [[kingdom]] and [[sovereign]] [[state]] in [[Western Europe]] comprising the four countries of [[England]], [[Scotland]] and [[Wales]] in the island of [[Great Britain]], and [[Northern Ireland]] in the island of [[Ireland]]. Since 1922. Capital: [[London]].
 # {{lb|en|historical}} The [[United Kingdom of Great Britain and Ireland]] (1801–1922)
 # {{lb|en|historical|informal}} The [[Kingdom of Great Britain]] (1707-1801)
 
@@ -21,7 +21,7 @@
 * {{sense|Sense 3}} {{l|en|Great Britain}} {{qualifier|official name}}, {{l|en|United Kingdom of Great Britain}} {{qualifier|modern use}}
 
 ====Translations====
-{{trans-top-also|Kingdom in Europe|Great Britain}}
+{{trans-top-also|id=Q145|Kingdom in Europe|Great Britain}}
 * Afrikaans: {{t|af|Verenigde Koninkryk}}
 * Albanian: {{t|sq|Mbretëria e Bashkuar}}
 * Amharic: {{t|am|ዩናይትድ ኪንግደም|sc=Ethi}}
@@ -142,5 +142,5 @@
 * {{list:countries of Europe/en}}
 * {{l|en|Appendix:Countries of the world|Countries of the world}}
 
-[[Category:en:Countries]]
+[[Category:en:Countries of Europe]]
 [[Category:en:United Kingdom]]
