/* English */ <et cetera#46202690>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -28,7 +28,7 @@ From {{etyl|la|en}} {{m|la|et cētera||and the [[other]] [[thing]]s; and the [[r
 * ''See'' '''[[etc.]]'''
 
 ====Translations====
-{{trans-see|noting the omission of the remainder of a list|[[etc.]] ''and'' [[and so forth]]}}
+{{trans-see|noting the omission of the remainder of a list|etc.|and so forth}}
 
 [[Category:English coordinates]]
 
