/* Readings */ {{ja-readings}} update <旧#46204135>

--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -40,7 +40,12 @@ In current form, calligraphical rendering of 臼.
 {{ja-kanji|grade=5|rs=日01|style=s|kyu=舊}}
 
 ====Readings====
-* {{ja-readings|goon=[[ぐ]] (gu)|kanon=[[きゅう]] (kyū) < きう (kiu)|kanyoon=[[く]] (ku)|kun=[[ふるい]] ([[旧い]], furui), [[もと]] (moto)}}
+{{ja-readings
+|goon=ぐ
+|kanon=きゅう<きう
+|kanyoon=く
+|kun=ふる-い, もと-
+}}
 
 ====Compounds====
 {{der-top|Compounds}}
