--- a/en/傔/傔.11174.wikitext
+++ b/en/傔/傔.11174.wikitext
@@ -14,12 +14,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[him3]]|y=him3}}
+===Pronunciation===
+{{zh-pron
+|m=qiàn
+|c=him3
+|mc=y
+|oc=y
+|ma=
+|cat=n
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -41,12 +52,3 @@
 {{ko-hanja|hangeul=겸|rv=gyeom|mr=kyŏm}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qiàn]] ([[qian4]])|wg=ch'ien<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
