/* Readings */ {{ja-readings}} update <昨#46204937>

--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -50,10 +50,11 @@
 # [[yesterday]]; last, past (day, week, month, year, etc.)
 
 ====Readings====
-* {{ja-readings
-|goon=[[ざく]] (zaku) {{qualifier|non-[[w:Jōyō kanji|Jōyō]] reading}}
-|kanon=[[さく]] (saku)
-|kun=[[きのう]] (kinō)}}
+{{ja-readings
+|goon=ざく
+|kanon=さく
+|kun=きのう-
+}}
 
 ====Compounds====
 * [[昨日]] ([[きのう]], [[kinō]]): [[yesterday]]
