--- a/en/昨/昨.16976.wikitext
+++ b/en/昨/昨.16976.wikitext
@@ -57,14 +57,14 @@
 }}
 
 ====Compounds====
-* [[昨日]] ([[きのう]], [[kinō]]): [[yesterday]]
-* [[昨週]] ([[さくしゅう]], [[sakushū]]): [[last week]]
-* [[昨月]] ([[さくげつ]], [[sakugetsu]]): [[last month]]
-* [[昨年]] ([[さくねん]], [[sakunen]]): [[last year]]
-* [[昨春]] ([[さくしゅん]], [[sakushun]]): [[last spring]]
-* [[昨夏]] ([[さくなつ]], [[sakunatsu]]): [[last summer]]
-* [[昨秋]] ([[さくしゅう]], [[sakushū]]): [[last autumn]]
-* [[昨冬]] ([[さくとう]], [[sakutō]]): [[last winter]]
+* {{ja-r|昨日|きのう}}: [[yesterday]]
+* {{ja-r|昨週|さくしゅう}}: [[last week]]
+* {{ja-r|昨月|さくげつ}}: [[last month]]
+* {{ja-r|昨年|さくねん}}: [[last year]]
+* {{ja-r|昨春|さくしゅん}}: [[last spring]]
+* {{ja-r|昨夏|さくなつ}}: [[last summer]]
+* {{ja-r|昨秋|さくしゅう}}: [[last autumn]]
+* {{ja-r|昨冬|さくとう}}: [[last winter]]
 
 ----
 
