--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -72,7 +72,7 @@ Three other forms were found in the oracle bone script:
 # [[bright]]
 
 ====Readings====
-* {{ja-readings|kanon=[[めい]] (mei)|goon=[[みょう]] (myō)|toon=[[みん]] (min)|kun=[[あかるい]] ([[明るい]], akarui), [[あきらか]] ([[明らか]], akiraka), [[あける]] ([[明ける]], akeru), [[あかす]]　([[明かす, akasu]])}}
+* {{ja-readings|goon=みょう<みやう|kanon=めい|(myō)|toon=みん|kun=あか-るい, あき-らか, あ-ける, あ-かす|nanori=あ, あか, あかり, あかる, あき, あきら, あけ, あける, きよし, くに, さとし, てる, とおる, とし, なお, のり, はじめ, はる, ひろ, み, みつ, よし}}
 
 ====Compounds====
 {{top3}}
