--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -26,10 +26,13 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 #*: This sort of crying proceeding from pride, obstinacy, and '''stomach''', the will, where the fault lies, must be bent.
 # {{lb|en|obsolete}} [[appetite|Appetite]].
 #: ''a good '''stomach''' for roast beef''
-#* {{RQ:RBrtn AntmyMlncly}}, II.ii.1.2:
-#*: If after seven hours' tarrying he shall have no '''stomach''', let him defer his meal, or eat very little at his ordinary time of repast.
 #* '''1591''', {{w|William Shakespeare}}, ''[[s: The Comedy of Errors|The Comedy of Errors]]'', I. ii. 50:
 #*: You come not home because you have no '''stomach'''. / You have no '''stomach''', having broke your fast.
+#* '''1595''', {{w|George Peele}}, ''[[w:The Old Wives' Tale (play)|The Old Wives’ Tale]]'', The Malone Society Reprints, 1908, lines 920-922,<sup>[https://archive.org/details/oldwivestale00peeluoft]</sup>
+#*: H<small>OST</small>. How say you sir, doo you please to sit downe?
+#*: E<small>UMENIDES</small>. Hostes I thanke you, I haue no great '''stomack'''.
+#* {{RQ:RBrtn AntmyMlncly}}, II.ii.1.2:
+#*: If after seven hours' tarrying he shall have no '''stomach''', let him defer his meal, or eat very little at his ordinary time of repast.
 # {{lb|en|figuratively}} [[desire|Desire]], [[appetite]] (for something abstract).
 #: ''I have no '''stomach''' for a fight today.''
 #* '''1591''', {{w|William Shakespeare}}, ''[[s: The Life of Henry the Fifth|The Life of Henry the Fifth]]'', IV. iii. 36:
