--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -38,7 +38,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * {{l|en|curtain-raise}}
 * {{l|en|curtain-raiser}}
 {{mid2}}
-* {{||en|curtain ring}}
+* {{l|en|curtain ring}}
 * {{l|en|final curtain}}
 {{bottom}}
 
