--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -71,11 +71,7 @@ Originally {{och-l|曐}}, which is a {{Han compound|ls=psc|nocap=1|晶|生|c1=s|
 # [[star]]
 
 ====Readings====
-{{ja-readings
-|goon=[[しょう]] (shō), {{qualifier|historical}} [[しやう]] (shau)
-|kanon=[[せい]] (sei)
-|kun=[[ほし]] (hoshi)
-}}
+{{ja-readings|goon=しょう<しやう|kanon=せい|kun=ほし}}
 
 ====Compounds====
 {{der-top|Compounds}}
