--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -12,9 +12,9 @@
 ===Proper noun===
 {{en-proper noun|head=[[united|United]] [[kingdom|Kingdom]]}}
 
-# {{senseid|en|Q145}}A [[kingdom]] and [[sovereign]] [[state]] in [[Western Europe]] comprising the four countries of [[England]], [[Scotland]] and [[Wales]] in the island of [[Great Britain]], and [[Northern Ireland]] in the island of [[Ireland]]. Since 1922. Capital: [[London]].
-# {{lb|en|historical}} The [[United Kingdom of Great Britain and Ireland]] (1801–1922)
-# {{lb|en|historical|informal}} The [[Kingdom of Great Britain]] (1707-1801)
+# {{senseid|en|Q145}}A [[kingdom]] and [[sovereign]] [[state]] in [[Western Europe]] comprising the four countries of [[England]], [[Scotland]] and [[Wales]] in the island of [[Great Britain]], and [[Northern Ireland]] in the island of [[Ireland]]. Since 1922.
+# {{senseid|en|Q174193}}{{lb|en|historical}} The [[United Kingdom of Great Britain and Ireland]] (1801–1922)
+# {{senseid|en|Q161885}}{{lb|en|historical|informal}} The [[Kingdom of Great Britain]] (1707-1801)
 
 ====Synonyms====
 * {{sense|Sense 1}} {{l|en|United Kingdom of Great Britain and Northern Ireland}} {{qualifier|official name}}, {{l|en|UK}} or {{l|en|U.K.}} or {{l|en|U. K.}} {{qualifier|abbreviation}}, {{l|en|Great Britain}} {{qualifier|loosely}}, {{l|en|Britain}} {{qualifier|loosely}}, {{l|en|England}} {{qualifier|non-standard; sometimes offensive}}.
