--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -300,7 +300,7 @@ Compare {{cog|ae|𐬌𐬭𐬌𐬏𐬙||tr=tūiri|curdled milk, whey}}), from {{d
 * Old English: {{t|ang|butere|f}}
 * Osage: {{t|osa|paazénii wéli}}
 * Ossetian: {{t|os|нæлхæ}}
-* Ottoman Turkish: {{t|ota|تره‌یاغی|tr=tereyağı}}
+* Ottoman Turkish: {{t|ota|تره‌یاغی|tr=tereyağı}}, {{t|ota|ياغ‎|tr=yağ}}
 * Persian: {{t+|fa|کره|tr=kare}}, {{t+|fa|مسکه|tr=maske|sc=fa-Arab}}
 * Polish: {{t+|pl|masło|n}}
 * Portuguese: {{t+|pt|manteiga|f}}
