/* Derived terms */ <cut#46483511>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -176,6 +176,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * {{l|en|cut of one's jib}}
 * {{l|en|cut-set}}
 {{rel-mid3}}
+* {{l|en|die-cut}}
 * {{l|en|direct cut}}
 * {{l|en|director's cut}}
 * {{l|en|final cut}}/[[make the final cut]]
