--- a/en/傅/傅.11157.wikitext
+++ b/en/傅/傅.11157.wikitext
@@ -20,26 +20,28 @@
 {{zh-pron
 |m=fù
 |c=fu6
-|mn=pò͘/tw:hū/qz,xm,zz:hù/tw:poh
-|mn_note=pò͘ - vernacular; hū/hù - literary; poh - dialectal
+|mn=pò͘/ml:hù/tw:hū
+|mn_note=pò͘ - vernacular (including surname); hù/hū - literary
 |mc=y
 |oc=y
 |ma=
 |cat=n,v,pn
 }}
 
-===Noun===
+===Definitions===
 {{zh-noun}}
 
-# [[tutor]], [[teacher]]
-# {{surname|lang=zh}}
-
-===Verb===
-{{zh-verb}}
-
-# to [[assist]] (or perhaps more broadly [[enhance]], [[bolster]], etc.)
+# {{lb|zh|literary}} [[tutor]]; [[teacher]]
+# {{lb|zh|literary}} to [[assist]]
+# {{lb|zh|literary}} to [[teach]]; to [[instruct]]
+# {{lb|zh|literary}} to [[attach]] to; to [[adhere]] to
+# {{lb|zh|literary}} to [[apply]]; to [[lay on]]; to [[lace]]
 #* {{zh-x|箭鏃 傅 毒藥|arrowheads '''laced with''' poison|CL|ref={{RQ:Manshu|4|The Yù​ Tribe (喻部落)|17}}}}
 #* {{zh-x|繡面蠻 初生 後 出月，以 針刺 面-上，以 青黛 傅 之。|The Face Tattoo Barbarians are tattooed on their face the month after birth, using needles '''laced with''' indigo dye.|CL|ref={{RQ:Manshu|4|The Black, Gold and Silver Tooth Barbarians (黑金銀齒蠻) and the Leg and Face Tattoo Barbarians (繡腳面蠻) of Yǒng​chāng​ (Prefecture) (永昌; ie. modern Baoshan)|18}}}}
+# {{surname|lang=zh}}
+
+===Compounds===
+{{zh-der|傅巖|傅粉郎|內傅|傅粉施朱|傅母|太子太傅|傅會|一傅眾咻|傅彩|傅父|傅粉何郎|少傅|師傅|如虎傅翼|外傅|主傅|傅近|大師傅|傅說版築|太傅|傅粉|保傅|施朱傅粉|施丹傅粉|為虎傅翼|皮傅|未傅|理髮師傅|面如傅粉|老師傅|裱褙師傅|篦頭師傅|齊傅楚咻}}
 
 ----
 
