--- a/en/傍/傍.11165.wikitext
+++ b/en/傍/傍.11165.wikitext
@@ -50,7 +50,11 @@
 # [[3rd person]]
 
 ====Readings====
-* {{ja-readings|goon=[[ぼう]] (bō)|kanon=[[ほう]] (hō)|kun=[[かたわら]] (katawara), [[そばに]] ([[傍に]], sobani), [[そう]] (sou)}}
+{{ja-readings
+|goon=ぼう
+|kanon=ほう
+|kun=かたわ-ら, そば, そ-う
+}}
 
 ===Etymology===
 {{ja-kanjitab|そば|yomi=k}}
