--- a/en/圸/圸.12986.wikitext
+++ b/en/圸/圸.12986.wikitext
@@ -16,9 +16,12 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土03}}
 
-# {{defn|lang=ja|sort=土03}}
-
 ====Readings====
 * {{ja-readings|on=|kun=[[やま]] (yama), [[まま]] (mama)}}
+
+===Noun===
+{{ja-noun|まま}}
+
+# [[cliff]]
 
 [[Category:Japanese-only CJKV Characters|土+03]]
