--- a/en/c/came.6839.wikitext
+++ b/en/c/came.6839.wikitext
@@ -94,6 +94,17 @@ Inflected form of {{m|fr|camer}}.
 # {{inflection of|camer||2|s|impr|lang=fr}}
 
 ----
+==Kurdish==
+
+===Noun===
+{{ku-noun}}
+
+# [[dress]], [[clothing]], [[garment]]
+
+===Derived terms===
+* {{l|ku|camedank}}
+
+----
 
 ==Latin==
 
