--- a/en/坐/坐.13011.wikitext
+++ b/en/坐/坐.13011.wikitext
@@ -72,11 +72,14 @@
 * {{ja-readings|goon=[[ざ]] (za)|kanon=[[さ]] (sa)|kun=[[すわる]] (suwaru), [[そぞろに]] (sozoroni), [[おわす]] (owasu)}}
 
 ====Compounds====
+{{der-top|Compounds}}
+* {{ja-r|座位|ざい}}, {{ja-r|坐位|ざい|[[seat]]; [[posing]] of [[sit]]ting; [[sitting]] [[sex position]]}}
 * [[坐視]]
 * [[坐礁]]
 * [[坐洲]]
 * [[端坐]]
 * [[連坐]]
+{{der-bottom}}
 
 ----
 
