--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -297,7 +297,7 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 {{trans-mid}}
 * Romanian: {{t-check|ro|ram|n}}, {{t-check|ro|ramură|f}}
 * Serbo-Croatian:
-* Spanish {{t+check|es|ramo|m}}
+* Spanish: {{t+check|es|ramo|m}}
 * Swahili: {{t-check|sw|tawi}}
 {{trans-bottom}}
 
