--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -72,7 +72,7 @@ Three other forms were found in the oracle bone script:
 # [[bright]]
 
 ====Readings====
-* {{ja-readings|goon=みょう<みやう|kanon=めい|(myō)|toon=みん|kun=あか-るい, あき-らか, あ-ける, あ-かす|nanori=あ, あか, あかり, あかる, あき, あきら, あけ, あける, きよし, くに, さとし, てる, とおる, とし, なお, のり, はじめ, はる, ひろ, み, みつ, よし}}
+* {{ja-readings|goon=みょう<みやう|kanon=めい|(myō)|toon=みん|kun=あか-るい, あき-らか, あ-ける, あ-かす|nanori=あ-, あか-, あか-り, あか-る, あき-, あきら-, あけ-, あ-ける, きよし-, くに-, さとし-, てる-, とおる-, とし-, なお-, のり-, はじめ-, はる-, ひろ-, み-, み-つ, よし-}}
 
 ====Compounds====
 {{top3}}
