/* Readings */ Any evidence for on-reading "bi"? <惟#46907937>

--- a/en/惟/惟.15604.wikitext
+++ b/en/惟/惟.15604.wikitext
@@ -43,7 +43,7 @@
 # {{defn|lang=ja|sort=心08}}
 
 ====Readings====
-* {{ja-readings|on=[[い]] (i), [[ゆい]] (yui), [[び]] (bi)|kun=[[おもう]] (omou), [[おもうに]] (omouni), [[これ]] (kore)|nanori=[[ただ]] (tada)}}
+* {{ja-readings|goon=ゆい|kanon=い<ゐ|kun=おも-うに, おも-んみる, これ|nanori=よし, のぶ, ただ}}
 
 ----
 
