--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -318,6 +318,7 @@ From {{etyl|fro|en}} {{m|fr|porter}}, from {{etyl|la|en}} {{m|la|portare||carry}
 #* {{quote-book|passage={{...}} the angelic squadron...began to hem him round with '''ported''' spears.|author=[[w:John Milton|Milton]]|title=[[w:Paradise Lost|Paradise Lost]]|year=1667|volume_plain=book IV}}
 # {{lb|en|computing|video games}} To adapt, modify, or create a new version of, a program so that it works on a different platform. {{pedialite|Porting|Porting (computing)}}
 # {{lb|en|telephony}} To carry or transfer an existing telephone number from one telephone service provider to another.
+# {{lb|en|governmental jargon, United States}} To transfer a voucher or subsidy from one jurisdiction to another.
 
 =====Derived terms=====
 * {{l|en|porter}}
