--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -287,7 +287,7 @@ Inherited from the {{inh|en|ang|port}}, from the {{der|en|la|porta||passage, gat
 * French: {{t+|fr|port|m}}
 * Galician: {{t+|gl|porto|m}}
 * German: {{t+|de|Port|m}}
-* Greek: {{t+|el|θύρα|f}}
+* Greek: {{t+|el|θύρα|f}}, {{t+|el|υποδοχή|f}}
 * Japanese: {{t+|ja|ポート|tr=pōto}}
 {{trans-mid}}
 * Korean: {{t|ko|포트|sc=Kore}}
