--- a/en/傒/傒.11172.wikitext
+++ b/en/傒/傒.11172.wikitext
@@ -4,7 +4,7 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=10|sn=12|four=22234|canj=OBVK|ids=⿰亻奚}}
 
-# personal [[name]]
+# [[personal name]]
 # [[servant]]
 
 ====References====
