--- a/en/傒/傒.11172.wikitext
+++ b/en/傒/傒.11172.wikitext
@@ -12,12 +12,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-forms}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[hai4]], [[hai6]]|y=hai4, hai6}}
+===Pronunciation===
+{{zh-pron
+|m=xī
+|c=hai4,hai6
+|mc=y
+|oc=y
+|ma=
+|cat=pn,n
+}}
 
-# {{defn|lang=yue|sort=人10}}
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
@@ -39,12 +50,3 @@
 {{ko-hanja|hangeul=혜|rv=hye|mr=hye}}
 
 # {{defn|lang=ko|sort=人10}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xī]] ([[xi1]])|wg=hsi<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
