t+xqa:[[اَمّاكْ]] t+tr:[[emmek]] t+ota:[[اممك]] ([[WT:EDIT|Assisted]]) <suck#46931287>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -115,6 +115,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Irish: {{t|ga|súigh}}
 * Italian: {{t+|it|succhiare}}, {{t|it|suggere}}, {{t|it|ciucciare}}
 * Japanese: {{t+|ja|吸う|tr=すう, suu}}, {{t|ja|しゃぶる|tr=shaburu}}
+* Karakhanid: {{t|xqa|اَمّاكْ|tr=emmēk}}
 * Khmer: {{t+|km|ជប់|tr=cup|sc=Khmr}}, {{t+|km|ក្រេប|tr=kreep|sc=Khmr}}
 * Korean: {{t+|ko|빨다|tr=ppalda}}
 * Kurdish: {{t+|ku|mêjîn}}, {{t+|ku|mêtin}}, {{t+|ku|مژین|sc=ku-Arab}}
@@ -130,6 +131,7 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * Mongolian: {{t-needed|mn}}
 * Norwegian: {{t|no|suge}}
 * Occitan: {{t+|oc|chucar}}
+* Ottoman Turkish: {{t|ota|اممك|tr=emmek}}
 * Persian: {{t+|fa|مکیدن|tr=makidan}}
 * Polish: {{t+|pl|ssać}}
 * Portuguese: {{t+|pt|chupar}}, {{t+|pt|sugar}}, {{t+|pt|chuchar}}
@@ -165,8 +167,11 @@ From {{etyl|enm|en}} {{m|enm|souken|souken, suken|}}, from {{etyl|ang|en}} {{m|a
 * French: {{t+|fr|téter}}
 * German: {{t+|de|saugen}}
 {{trans-mid}}
+* Karakhanid: {{t|xqa|اَمّاكْ|tr=emmēk}}
 * Khmer: {{t+|km|អាំ|tr=am|sc=Khmr}}, {{t+|km|ម៉ិម|tr=məm|sc=Khmr}}
+* Ottoman Turkish: {{t|ota|اممك|tr=emmek}}
 * Swahili: {{t+|sw|nyonya|alt=kunyonya}}
+* Turkish: {{t+|tr|emmek}}
 {{trans-bottom}}
 
 {{trans-top|to work the lips and tongue on}}
