--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -174,6 +174,11 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Swedish: {{t+|sv|nyzeeländsk}}
 {{trans-bottom}}
 
+===Noun===
+{{en-noun|head=New Zealand}}
+
+# A [[rabbit]] of a [[breed]] that originated in [[California]] from rabbits imported from New Zealand.
+
 ===See also===
 * {{l|en|Appendix:Countries of the world}}
 
