--- a/en/愒/愒.15654.wikitext
+++ b/en/愒/愒.15654.wikitext
@@ -17,7 +17,7 @@
 ===Glyph origin===
 {{Han etym}}
 
-===Pronunciation===
+===Pronunciation 1===
 {{zh-pron
 |m=qì,kài
 |c=hot3,kai3,koi3,hei3
@@ -26,7 +26,7 @@
 |cat=
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # {{rfdef|zh}}
@@ -34,7 +34,7 @@
 ====Compounds====
 {{zh-der|忨愒|愒日|玩愒|玩日愒歲|玩歲愒日}}
 
-===Pronunciation===
+===Pronunciation 2===
 {{zh-pron
 |m=qì
 |c=hei3
@@ -43,7 +43,7 @@
 |cat=
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
 # {{zh-alt-form|憩}}
