--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -26,7 +26,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 #*: Or how 'bout Shane DiMora? Could he possibly get rip-roaring '''cut''' this time around?
 #* '''2010''', Bill Geiger, "6-pack Abs in 9 Weeks", ''Reps!'' '''17''':106
 #*: That's the premise of the overload principle, and it must be applied, even to ab training, if you're going to develop a '''cut''', ripped midsection.
-# {{lb|en|informal}} [[circumcised|Circumcised]].
+# {{lb|en|informal}} [[circumcised|Circumcised]] or having been the subject of [[female genital mutilation]]
 # {{lb|en|Australia|NZ|slang}} Emotionally [[hurt]].
 # Eliminated from consideration during a recruitment drive.
 # Removed from a team roster.
