--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -115,8 +115,7 @@ Plastics are energy-rich substances, which is why many of them burn so readily. 
 * Czech: {{t+|cs|nalézat|impf}}, {{t+|cs|nalézt|pf}}, {{t+|cs|nacházet|impf}}, {{t+|cs|najít|pf}}
 * Danish: {{t+|da|finde}}, {{t|da|træffe}}
 * Dutch: {{t+|nl|vinden}}, {{t+|nl|aantreffen}}
-* Egyptian: {{t|egy|gm|sc=Egyp}}
-*: <hiero>gm-m</hiero>
+* Egyptian: {{t-egy|gm|h=gm-m}}
 * Esperanto: {{t+|eo|trovi}}
 * Estonian: {{t|et|leidma}}
 * Faroese: {{t|fo|finna}}
