t+gl:[[substancia]] ([[WT:EDIT|Assisted]]) <substance#46949545>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -97,6 +97,7 @@ From {{etyl|fro|en}} {{m|fro|substance}}, from {{etyl|la|en}} {{m|la|substantia|
 * Danish: {{t|da|substans}}, {{t|da|hovedindhold}}
 * Finnish: {{t+|fi|ydin}}, {{t+|fi|substanssi}}, {{t+|fi|olemus}}
 * French: {{t+|fr|substance|f}}
+* Galician: {{t+|gl|substancia|f}}
 * German: {{t+|de|Substanz|f}}
 * Greek: {{t+|el|ουσία|f}}
 * Hebrew: {{t|he|תוכן|m|tr=tókhen}}
