/* Translations */ Haitian Creole added. <catch#46950211>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -349,6 +349,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 * Gallurese: {{t|sdn|aggantà}}
 * Georgian: {{t|ka|დაჭერა}}
 * German: {{t+|de|fangen}}
+* Haitian Creole: {{t|ht|atrap}}
 * Ido: {{t+|io|kaptar}}
 * Interlingue: {{t|ie|capter}}
 * Irish: {{t|ga|ceap}}, {{t|ga|beir ar}}
