--- a/en/偫/偫.11131.wikitext
+++ b/en/偫/偫.11131.wikitext
@@ -12,11 +12,15 @@
 
 ----
 
-==Cantonese==
+==Chinese==
 
-===Hanzi===
-{{yue-hanzi|jyut=[[doi6]], [[zi6]]|y=doi6, ji6}}
+===Pronunciation===
+{{zh-pron
+|m=zhì
+|c=doi6,zi6
+}}
 
+===Definition===
 # {{defn|lang=yue|sort=人09}}
 
 ----
@@ -39,12 +43,3 @@
 {{ko-hanja|hangeul=치|rv=chi|mr=ch'i|y=chi}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhì]] ([[zhi4]])|wg=chih<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
