--- a/en/傂/傂.11154.wikitext
+++ b/en/傂/傂.11154.wikitext
@@ -11,11 +11,14 @@
 
 ----
 
-==Cantonese==
+==Chinese==
 
-===Hanzi===
-{{yue-hanzi|jyut=[[zi6]]|y=ji6}}
+===Pronunciation===
+{{zh-pron
+|m=zhì
+|c=zi6
 
+===Definition===
 # {{defn|lang=yue|sort=人10}}
 
 ----
@@ -29,12 +32,3 @@
 
 ====Readings====
 * {{ja-readings|on=[[ち]] (chi), [[じ]] (ji), [[し]] (shi)|kun=[[かたたがい]] (katatagai), [[ひとしくない]] (hitoshikunai)}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[zhì]] ([[zhi4]])|wg=chih<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=人10}}
