Korean definitions enriched <昔#46965863>

--- a/en/昔/昔.16956.wikitext
+++ b/en/昔/昔.16956.wikitext
@@ -118,7 +118,9 @@ From {{etyl|ojp|ja|sort=むかし}}. The ''muka'' portion derives from the {{m|j
 ===Hanja===
 {{ko-hanja|hangeul=[[석]], [[착]]|eumhun=|rv=seok, chak|mr=sŏk, ch'ak|y=sek, chak}}
 
-# {{defn|lang=ko|sort=日04}}
+# [[formerly]]
+# [[ancient]]
+# in beginning
 
 ----
 
