t+de:[[Zahnbrücke]] ([[WT:EDIT|Assisted]]) <bridge#46982093>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -320,7 +320,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Faroese: {{t|fo|brúgv|f}}
 * Finnish: {{t+|fi|silta}}, {{t+|fi|hammassilta}}
 * French: {{t+|fr|bridge|m}}, {{qualifier|Canada}} {{t+|fr|pont|m}}
-* German: {{t+|de|Brücke|f}}
+* German: {{t+|de|Brücke|f}}, {{t|de|Zahnbrücke|f}}
 * Greek: {{t+|el|γέφυρα|f}}
 * Hungarian: {{t+|hu|híd}}
 * Inuktitut: {{t|iu|ᑭᒍᑎᓐᖑᐊᑦ ᓂᐱᑎᓯᒪᔪᑦ|sc=Cans}}
