t+khb:[[{{t-needed}}]] t+shn:[[{{t-needed}}]] t+za:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <speak#46993600>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -165,6 +165,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Lithuanian: {{t+|lt|kalbėti}}
 * Lojban: {{t+|jbo|tavla}}
 * Luxembourgish: {{t|lb|schwätzen}}
+* Lü: {{t-needed|khb}}
 * Macedonian: {{t|mk|збо́рува|impf}}
 * Malay: {{t|ms|bercakap}}
 * Malayalam: {{t+|ml|സംസാരിക്കുക|sc=Mlym}}
@@ -172,8 +173,8 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Marathi: {{t|mr|बोलणे|sc=Deva}}
 * Meänkieli: {{t|fit|praatata}}
 * Mingrelian: {{t-needed|xmf}}
-* Mirandese: {{t|mwl|falar}}
 {{trans-mid}}
+* Mirandese: {{t|mwl|falar}}
 * Mongolian: {{t+|mn|ярих|sc=Cyrl}}
 * Nahuatl: {{t|nah|tlatoa}}
 * Navajo: {{t|nv|yáshtiʼ}}
@@ -212,6 +213,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|говорити|impf|sc=Cyrl}}
 *: Roman: {{t+|sh|govoriti|impf}}
+* Shan: {{t-needed|shn}}
 * Shona: {{t|sn|kutaura}}
 * Sicilian: {{t+|scn|parrari}}, {{t+|scn|parlari}}
 * Sinhalese: {{t|si|කථා කරනවා|sc=Sinh}}
@@ -249,6 +251,7 @@ From {{etyl|enm|en}} {{m|enm|speken||to speak}}, from {{etyl|ang|en}} {{m|ang|sp
 * Welsh: {{t+|cy|siarad}}, {{t+|cy|llefaru}}
 * West Frisian: {{t|fy|sprekke}}
 * Yiddish: {{t+|yi|רעדן}}
+* Zhuang: {{t-needed|za}}
 * Zulu: {{t|zu|khuluma|alt=-khuluma}}
 {{trans-bottom}}
 
