--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -5,9 +5,9 @@
 * {{l|en|blonde}}
 
 ===Etymology===
-From {{etyl|frm|en}} {{m|fr|blond|g=m}}, from {{etyl|fro|en}} {{m|fro|blond|blond, blont}}, from {{etyl|frk|en}} {{m|frk|*blund||a mixed color between golden and light-brown}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*blundaz||mixed, blinding}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰlendʰ-||to become turbid, see badly, go blind}}. Compare {{cog|ang|blondenfeax|''blonden''feax|grey-haired}}, {{cog|ang|blandan||to mix}}. More at {{l|en|blend}}.
+{{bor|en|frm|blond|g=m}}, from {{der|en|fro|blond|blond, blont}}, from {{der|en|frk|*blund|t=a mixed color between golden and light-brown}}, from {{der|en|gem-pro|*blundaz|t=mixed, blinding}}, from {{der|en|ine-pro|*bʰlendʰ-|t=to become turbid, see badly, go blind}}. Compare {{cog|ang|blondenfeax|''blonden''feax|t=grey-haired}}, {{cog|ang|blandan|t=to mix}}. More at {{l|en|blend}}.
 
-Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem-pro|*blundaz||blond}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*bʰl̥ndʰ-}}, {{m|ine-pro|*bʰlendʰ-||blond, red-haired}}. If so, then it would be cognate with {{cog|sa|ब्रध्न||tr=bradhná|ruddy, pale red, yellowish}}.
+Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t=blond}}, from {{der|en|ine-pro|*bʰl̥ndʰ-}}, {{m|ine-pro|*bʰlendʰ-|t=blond, red-haired}}. If so, then it would be cognate with {{cog|sa|ब्रध्न|tr=bradhná|t=ruddy, pale red, yellowish}}.
 
 ===Pronunciation===
 * {{a|RP}} {{IPA|/blɒnd/|lang=en}}
@@ -27,41 +27,39 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 
 ====Translations====
 {{trans-top|fair-haired person}}
-* Bulgarian: {{t|bg|блондин|m|tr=blondín}}, {{t|bg|блондинка|f|tr=blondínka}}
+* Bulgarian: {{t|bg|блонди́н|m}}|tr=blondín, {{t|bg|блонди́нка|f}}|tr=blondínka
 * Catalan: {{t+|ca|ros|m}}<!--(only hair, not skin)-->
 * Chinese:
-*: Mandarin: {{t+|cmn|金髮|sc=Hani}}, {{t+|cmn|金发|tr=jīnfà|sc=Hani}} {{qualifier|blond hair}}
+*: Mandarin: {{t+|cmn|金髮}}, {{t+|cmn|金发|tr=jīnfà}} {{qualifier|blond hair}}
 * Czech: {{t+|cs|blondýna|f}}, {{t+|cs|blonďák|m}}
 * Danish: {{t|da|lyshåret}}; blond, {{t+|da|blondine}}
 * Dutch: {{t+|nl|blond}}, {{t+|nl|blondine}}
 * Esperanto: {{qualifier|♂♀}} {{t|eo|blondulo}}, {{qualifier|♂}} {{t|eo|virblondulo}}, {{qualifier|♀}} {{t|eo|blondulino}}
 * Finnish: {{t+|fi|vaaleaverikkö}}
 * French: {{t+|fr|blond|m}}, {{t+|fr|blonde|f}}
-* Georgian: {{t|ka|ქერა|sc=Geor}}
+* Georgian: {{t|ka|ქერა}}
 * German: {{t|de|Blonder|m}}, {{t|de|Blondin|m}} {{qualifier|obsolete}}, {{t|de|Blonde|f}}, {{t+|de|Blondine|f}}, {{t|de|Blondhaariger|m}}, {{t|de|Blondhaarige|f}}, {{t|de|Flachshaariger|m}}, {{t|de|Flachshaarige|f}}, {{qualifier|♂♀}} {{t|de|Blondkopf|m}}, {{qualifier|♂♀}} {{t|de|Blondschopf|m}}
-* Greek: [[ξανθός]] ''m'', [[ξανθή]] ''f''
-* Hebrew: {{t|he|בְּלוֹנְדִּינִי|m|tr=blondíni|sc=Hebr}}, {{t|he|בְּלוֹנְדִּינִית|f|tr=blondínit|sc=Hebr}}
-* Hindi: {{t|hi|सुनहरे बालोंवाला|sc=Deva}}
+* Hebrew: {{t|he|בְּלוֹנְדִּינִי|m|tr=blondíni}}, {{t|he|בְּלוֹנְדִּינִית|f|tr=blondínit}}
+* Hindi: {{t|hi|सुनहरे बालोंवाला}}
 * Hungarian: {{t+|hu|szőke}}
 * Icelandic: {{t|is|ljóshærður|m}}, {{t|is|ljóshærð|f}}
 * Ido: {{qualifier|♂}} {{t+|io|blondulo}}, {{qualifier|♀}} {{t+|io|blondino}}, {{t+|io|blondo}}
-* Irish: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{g|m}}, [[bean#Irish|bean]] fhionn {{g|f}}
 * Italian: {{t+|it|biondo|m}}, {{t|it|bionda|f}}
 {{trans-mid}}
-* Japanese: {{t|ja|ブロンド|tr=burondo|sc=Jpan}}, {{t|ja|金髪|tr=きんぱつ, kinpatsu|sc=Jpan}} {{qualifier|blond hair}}
+* Japanese: {{t|ja|ブロンド|tr=burondo}}, {{t|ja|金髪|tr=きんぱつ, kinpatsu}} {{qualifier|blond hair}}
 * Korean: {{t|ko|금발인}}, {{t+|ko|금발}} {{qualifier|blond hair}}
 * Latin: {{t+|la|flāvus|m}}, {{t|la|flāvicomus|m}}, {{t+|la|fulvus|m}}
 * Latvian: {{t|lv|gaišmatis|m}}, {{t|lv|gaišmate|f}}, {{t|lv|blondīns|m}}, {{t|lv|blondīne|f}}
-* Macedonian: {{t|mk|русокос|m|tr=rúsokos}}, {{t|mk|плав|m|tr=plav}}, {{t|mk|русокоса|f|tr=rusókosa}}, {{t|mk|плава|f|tr=pláva}}
+* Macedonian: {{t|mk|ру́сокос|m}}|tr=rúsokos, {{t|mk|плав|m}}, {{t|mk|русо́коса|f}}|tr=rusókosa, {{t|mk|пла́ва|f}}|tr=pláva
 * Norwegian: {{t|no|lys(håret)}}, blond, {{t+|no|blondine}}
-* Persian: {{t+|fa|بلوند|tr=blond|sc=fa-Arab}}
+* Persian: {{t+|fa|بلوند|tr=blond}}
 * Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
 * Portuguese: {{t+|pt|loiro|m}}, {{t+|pt|louro|m}}, {{t+|pt|loira|m}}, {{t+|pt|loura|f}}
-* Punjabi: {{t|pa|ਕੱਕਾ|m|tr=kakkā|sc=Guru}}
+* Punjabi: {{t|pa|ਕੱਕਾ|m}}|tr=kakkā
 * Romanian: {{t+|ro|blondă}}
 * Russian: {{t+|ru|блонди́н|m}}, {{t+|ru|блонди́нка|f}}
-* Scottish Gaelic: {{t|gd|bàn}}, [[fionn]] (of both males and females), [[fear#Scottish Gaelic|fear]] bàn {{g|m}}, [[bean#Scottish Gaelic|bean]] bhàn {{g|f}}
-* Spanish: {{t+|es|rubio|m}}, [[canche]] {{g|m}} {{qualifier|Guatemala}}, [[catire]] {{g|m}} {{qualifier|Venezuela}}, [[chele]] {{g|m}} {{qualifier|El Salvador|Honduras|Nicaragua}}, [[choco]] {{g|m}} {{qualifier|Bolivia}}, [[fulo]] {{g|m}} {{qualifier|Panama}}, [[gringo]] {{g|m}} {{qualifier|Peru}}, [[güero]] {{g|m}} {{qualifier|Mexico}}, [[macho]] {{g|m}} {{qualifier|Costa Rica}}, [[mono]] {{g|m}} {{qualifier|Colombia}}, [[rucio]] {{g|m}} {{qualifier|Chile}}, [[suco]] {{g|m}} {{qualifier|Ecuador}}
+* Scottish Gaelic: {{t|gd|bàn}}
+* Spanish: {{t+|es|rubio|m}}
 * Swedish: {{t+|sv|blondin|c}}
 * Tagalog: {{t|tl|rubyo}}, {{t|tl|rubya}}
 * Turkish: {{t+|tr|sarışın}}
@@ -77,8 +75,8 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 * German: {{t|de|Blond|n}}
 * Hungarian: {{t+|hu|szőke}} {{qualifier|hair color}}
 {{trans-mid}}
-* Japanese: {{t|ja|金髪|tr=kinpatsu|sc=Jpan}} {{qualifier|hair color}}
-* Persian: {{t+|fa|بور|sc=fa-Arab}}
+* Japanese: {{t|ja|金髪|tr=kinpatsu}} {{qualifier|hair color}}
+* Persian: {{t+|fa|بور}}
 * Polish: {{t+|pl|blond|m}}
 * Portuguese: {{t+|pt|loiro|m}}
 {{trans-bottom}}
@@ -109,25 +107,25 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 * Arabic: {{t|ar|أَشْقَر}}, {{t|ar|شَقْرَاء|f}}
 * Bulgarian: {{t+|bg|рус}}, {{t+|bg|светъл}}
 * Chinese:
-*: Mandarin: {{t+|cmn|金髮|sc=Hani}}, {{t+|cmn|金发|tr=jīnfà|sc=Hani}}
+*: Mandarin: {{t+|cmn|金髮}}, {{t+|cmn|金发|tr=jīnfà}}
 * Dutch: {{t+|nl|blond}}
 * Esperanto: {{t+|eo|blonda}}
 * Finnish: {{t+|fi|vaalea}}
 * French: {{t+|fr|blond|m}}
 * German: {{t+|de|blond}}, {{t+|de|hell}}
 * Ido: {{t+|io|blonda}}
-* Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の|sc=Jpan}}
+* Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の}}
 {{trans-mid}}
 * Korean: {{t+|ko|금발|tr=geumbar-ui|alt=금발의}}
 * Latvian: {{t|lv|blonds}}
-* Macedonian: {{t|mk|рус|f|tr=rus}}, {{t|mk|плав|f|tr=plav}}
+* Macedonian: {{t|mk|рус|f}}|tr=rus, {{t|mk|плав|f}}|tr=plav
 * Norman: {{t|nrf|bliond}}
 * Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
 * Russian: {{t+|ru|све́тлый}}, {{t+|ru|ру́сый}}
 * Spanish: {{t+|es|rubio}}
 * Swedish: {{t+|sv|blond}}
 * Tagalog: {{t|tl|buhuk-mais}}
-* Volapük: {{t+|vo|blonik}}, {{qualifier|obsolete}} {{t|vo|blönik}}
+* Volapük: {{t+|vo|blonik}}, {{t|vo|blönik}} {{qualifier|obsolete}}
 {{trans-bottom}}
 
 {{trans-top|having blonde hair or complexion}}
@@ -137,59 +135,35 @@ Alternative etymology connects {{cog|frk|*blund}} to {{etyl|gem-pro|en}} {{m|gem
 * Dutch: {{t+|nl|blond}}
 * Esperanto: {{t+|eo|blonda}}
 * Finnish: {{t+|fi|vaalea}}
-* Georgian: {{t|ka|ქერა|sc=Geor}}
+* Georgian: {{t|ka|ქერა}}
 * German: {{t+|de|blond}}, {{t|de|blondhaarig}}, {{t|de|flachshaarig}}, {{t+|de|hellhäutig}} {{qualifier|skin}}
 * Greek:
-*: Ancient: {{t|grc|ξανθός|sc=polytonic}}
+*: Ancient: {{t|grc|ξανθός}}
 * Ido: {{t+|io|blonda}}
-* Khmer: {{t|km|សក់ទង់ដែង|tr=sɑk tʊəŋ daeŋ|sc=Khmr}}
+* Khmer: {{t|km|សក់ទង់ដែង|tr=sɑk tʊəŋ daeŋ}}
 {{trans-mid}}
 * Latin: {{t+|la|flāvus|m}}
 * Latvian: {{t|lv|gaišmatains}}, {{t|lv|blonds}}
-* Macedonian: {{t|mk|светол|m|tr=svétol}}, {{t|mk|белолик|m|tr=bélolik}}, {{t|mk|светла|f|tr=svétla}}, {{t|mk|белолика|f|tr=belólika}}
+* Macedonian: {{t|mk|све́тол|m}}|tr=svétol, {{t|mk|бе́лолик|m}}|tr=bélolik, {{t|mk|све́тла|f}}|tr=svétla, {{t|mk|бело́лика|f}}|tr=belólika
 * Mongolian: {{t-needed|mn}}
-* Persian: {{t+|fa|بور|tr=bur|sc=fa-Arab}}
+* Persian: {{t+|fa|بور|tr=bur}}
 * Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
 * Russian: {{t+|ru|бе́лый}}
-* Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, blond
+* Swedish: {{t+|sv|ljus}}, {{t+|sv|ljushyad}}, {{t|sv|blond}}
 * Tagalog: {{t|tl|rubyo}}
 * Thai: {{t-needed|th}}
 * Vietnamese: {{t-needed|vi}}
-* Volapük: {{t+|vo|blonik}}, {{qualifier|obsolete}} {{t|vo|blönik}}
+* Volapük: {{t+|vo|blonik}}, {{t|vo|blönik}} {{qualifier|obsolete}}
 {{trans-bottom}}
 
 {{checktrans-top}}
-* Bulgarian: {{t+check|bg|златист|sc=Cyrl}}
+* Bulgarian: {{t+check|bg|златист}}
 {{trans-mid}}
 * Turkish: {{t+check|tr|sarışın}}
 {{trans-bottom}}
 
 ===Derived terms===
-{{rel-top|terms derived from ''blond''}}
-* {{l|en|ash blond}}/[[ash blonde]]
-* {{l|en|bleached blond}}/[[bleached blonde]]
-* {{l|en|blondie}}
-* {{l|en|blondish}}
-* {{l|en|blondism}}
-* {{l|en|blondly}}/[[blondely]]
-* {{l|en|blond metal}}
-* {{l|en|blond moment}}/[[blonde moment]]
-* {{l|en|blondness}}/[[blondeness]]
-* {{l|en|bottle blond}}/[[bottle blonde]]
-* {{l|en|dirty blond}}/[[dirty blonde]]
-{{rel-mid}}
-* {{l|en|dishwater blond}}/[[dishwater blonde]]
-* {{l|en|dumb blond}}/[[dumb blonde]]
-* {{l|en|golden blond}}/[[golden blonde]]
-* {{l|en|honey blond}}/[[honey blonde]]
-* {{l|en|peroxide blond}}/[[peroxide blonde]]
-* {{l|en|platinum blond}}/[[platinum blonde]]
-* {{l|en|sandy blond}}/[[sandy blonde]]
-* {{l|en|strawberry blond}}/[[strawberry blonde]]
-* {{l|en|ultrablond}}
-* {{l|en|Venetian blond}}/[[Venetian blonde]]
-* {{l|en|white blond}}/[[white blonde]]
-{{rel-bottom}}
+{{der3|lang=en|[[ash blond]]/[[ash blonde]]|[[bleached blond]]/[[bleached blonde]]|blondie|blondish|blondism|[[blondly]]/[[blondely]]|blond metal|[[blond moment]]/[[blonde moment]]|[[blondness]]/[[blondeness]]|[[bottle blond]]/[[bottle blonde]]|[[dirty blond]]/[[dirty blonde]]|[[dishwater blond]]/[[dishwater blonde]]|[[dumb blond]]/[[dumb blonde]]|[[golden blond]]/[[golden blonde]]|[[honey blond]]/[[honey blonde]]|[[peroxide blond]]/[[peroxide blonde]]|[[platinum blond]]/[[platinum blonde]]|[[sandy blond]]/[[sandy blonde]]|[[strawberry blond]]/[[strawberry blonde]]|ultrablond|[[Venetian blond]]/[[Venetian blonde]]|[[white blond]]/[[white blonde]]}}
 
 ====See also====
 * {{l|en|brunet}}, {{l|en|brunette}}
