t+el:[[ξανθός]] t+el:[[ξανθή]] t+gd:[[fionn]] t+es:[[canche]] t+es:[[catire]] t+es:[[chele]] t+es:[[choco]] t+es:[[fulo]] t+es:[[gringo]] t+es:[[güero]] t+es:[[macho]] t+es:[[mono]] t+es:[[rucio]] t+es:[[suco]] t+ga:[[fionn]] t-balance ([[W... <blond#46998336>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -39,6 +39,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * French: {{t+|fr|blond|m}}, {{t+|fr|blonde|f}}
 * Georgian: {{t|ka|ქერა}}
 * German: {{t|de|Blonder|m}}, {{t|de|Blondin|m}} {{qualifier|obsolete}}, {{t|de|Blonde|f}}, {{t+|de|Blondine|f}}, {{t|de|Blondhaariger|m}}, {{t|de|Blondhaarige|f}}, {{t|de|Flachshaariger|m}}, {{t|de|Flachshaarige|f}}, {{qualifier|♂♀}} {{t|de|Blondkopf|m}}, {{qualifier|♂♀}} {{t|de|Blondschopf|m}}
+* Greek: {{t+|el|ξανθός|m}}, {{t+|el|ξανθή|f}}
 * Hebrew: {{t|he|בְּלוֹנְדִּינִי|m|tr=blondíni}}, {{t|he|בְּלוֹנְדִּינִית|f|tr=blondínit}}
 * Hindi: {{t|hi|सुनहरे बालोंवाला}}
 * Hungarian: {{t+|hu|szőke}}
@@ -58,8 +59,8 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Punjabi: {{t|pa|ਕੱਕਾ|m}}|tr=kakkā
 * Romanian: {{t+|ro|blondă}}
 * Russian: {{t+|ru|блонди́н|m}}, {{t+|ru|блонди́нка|f}}
-* Scottish Gaelic: {{t|gd|bàn}}
-* Spanish: {{t+|es|rubio|m}}
+* Scottish Gaelic: {{t|gd|bàn}}, {{t|gd|fionn}}
+* Spanish: {{t+|es|rubio|m}}, {{t|es|canche|m}} {{qualifier|Guatemala}}, {{t|es|catire|m}} {{qualifier|Venezuela}}, {{t+|es|chele|m}} {{qualifier|El Salvador|Honduras|Nicaragua}}, {{t+|es|choco|m}} {{qualifier|Bolivia}}, {{t|es|fulo|m}} {{qualifier|Panama}}, {{t+|es|gringo|m}} {{qualifier|Peru}}, {{t+|es|güero|m}} {{qualifier|Mexico}}, {{t+|es|macho|m}} {{qualifier|Costa Rica}}, {{t+|es|mono|m}} {{qualifier|Colombia}}, {{t+|es|rucio|m}} {{qualifier|Chile}}, {{t|es|suco|m}} {{qualifier|Ecuador}}
 * Swedish: {{t+|sv|blondin|c}}
 * Tagalog: {{t|tl|rubyo}}, {{t|tl|rubya}}
 * Turkish: {{t+|tr|sarışın}}
@@ -114,8 +115,9 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * French: {{t+|fr|blond|m}}
 * German: {{t+|de|blond}}, {{t+|de|hell}}
 * Ido: {{t+|io|blonda}}
-* Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の}}
+* Irish: {{t|ga|fionn}}
 {{trans-mid}}
+* Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の}}
 * Korean: {{t+|ko|금발|tr=geumbar-ui|alt=금발의}}
 * Latvian: {{t|lv|blonds}}
 * Macedonian: {{t|mk|рус|f}}|tr=rus, {{t|mk|плав|f}}|tr=plav
